<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StartFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/header_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/header_title"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textColor="@color/md_blue_700"
            android:textSize="35sp"
            app:fontFamily="@font/headerhello"/>
        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/chip_group"
            android:layout_marginBottom="10dp"
            android:text="@string/header"
            android:textAlignment="center"
            android:textColor="@color/md_blue_700"
            android:textSize="25sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_admob"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:checkable="true"
                android:text="@string/admob"
                android:textAlignment="center"
                android:textAppearance="@style/chipText"
                android:textSize="20sp"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipIcon="@drawable/admob"
                app:chipIconSize="30dp"
                app:chipStrokeColor="@color/md_blue_700"
                app:chipStrokeWidth="2dp"
                app:iconStartPadding="5dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_other"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_below="@id/chip_admob"
                android:checkable="true"
                android:text="@string/iron_source"
                android:textAlignment="center"
                android:textAppearance="@style/chipText"
                android:textSize="20sp"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipIcon="@drawable/ironsource"
                app:chipIconSize="30dp"
                app:chipStrokeColor="@color/md_blue_700"
                app:chipStrokeWidth="2dp"
                app:iconStartPadding="5dp" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="250dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="@string/continueBtn"
            android:backgroundTint="@color/md_blue_700"
            android:layout_below="@id/chip_group"
            android:layout_marginTop="50dp"
            android:textColor="@color/md_white_1000"/>
    </RelativeLayout>

</FrameLayout>